package Model;

public interface JeuObserver {
    public void Update();

}
