package Model;

public interface MancheObserver {
    void Update();
}
